# pico-pio-connect

./: README.md
example1/: README.md
example1/pico_1/: CMakeLists.txt  pico_1.c
example1/pico_2/: pico_2.c
example2/: README.md
example2/common/: link_common.c  link_common.h
example2/pico_1/: CMakeLists.txt  pico_1.c  pico_1.c~
example2/pico_2/: CMakeLists.txt  pico_2.c  pico_2.c~
example3/: README.md
example3/common/: link_common.c  link_common.h  picoputer.pio
example3/pico_1/: pico_1.c  picoputer.pio
example3/pico_2/: pico_2.c
example4/: README.md
example4/common/: link_common.c  link_common.h
example4/pico_1/: CMakeLists.txt  pico_1.c
example4/pico_2/: CMakeLists.txt  pico_2.c
example_am/: README.md
example_am/common/: link_common.c
example_am/pico_1/: CMakeLists.txt  pico_1.c
example_am/pico_2/: CMakeLists.txt
